[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["Tabatha Wiggers <tatchiwiggers@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^8.1.1"
pylint = "^3.1.0"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
